--- a/Style.css
+++ b/Style.css
@@ -1,157 +1,47 @@
-
-/* shared style */
-
-button{
-    background-color:  #2657e9;
-    border: none;
-    border-radius: 15px;
-    margin-left: 10px;
-    height: 40px;
-}
-
-/* shared style */
-
-
-
-body{
-
-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-color: white;
-background-color: black;
-
-
+*{
+    background-color: black;
+    color:white
 
 }
+html{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
 
-/* nav style */
 
 nav{
-
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    margin: o 200px;
-
+    
 }
 
-.nav-title{ color:  #ffffff;
+.nav-title{
 
-         font-family: 'Times New Roman', Times, serif;
-         font-size: 45px;   
-         font-style: normal;
-         font-weight: 800;
-         line-height: normal;
-
-
-
-
+   font-size: 25px;
+   font-weight: 800px;
 
 }
-
 nav > ul{
 
-display: flex;
-align-items: center;
-
-
-}
-nav li{
-
-    list-style: none;
-    margin-right: 50px;
-
+    display: flex;
+    align-items: center;
 }
 
-nav a{
-    text-decoration: none;
-    color: white;
+    nav li {
+
+list-style: none;
+ margin-right: 50px;
 }
-
-.header{
-
-   margin-top: 0%;
+nav a{text-decoration: none;
+color: white;
 }
-
-.name{font-size: x-large;}
-
-.pera{
-    width: 40%;
+.banner{
+    display: flex;
+    align-items: center;
 }
-
-.photo-one{
-
- height: 500px;
-
+.site-photo{ width: 500px;
+box-shadow: 10px; 
+margin: ;
+bottom: 0;
+right: 0;
+margin: 0;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
