--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,5 @@
+ 
+
 *{
     background-color: black;
     color:white
@@ -5,6 +7,12 @@
 }
 html{
     font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+p{
+
+font-family: serif;
+
 }
 
 
