--- a/Style.css
+++ b/Style.css
@@ -83,8 +83,10 @@ text-align: center;
 
 .wido{
     
-    padding: 150px;
+    padding: 30px 150px;
 
+    
+        
 }
 .wido-title{
 
@@ -93,6 +95,26 @@ text-align: center;
 .wido-description{
     text-align: center;
     padding: 20px 150px;
+
+}
+
+.skill-container{
+    display: flex;
+
+}
+
+.skill{
+    padding: 30px;
+    gap: 24px;
+    background: #42424277;
+    box-shadow: 2px 6px 50px 2px rgb(58, 58, 58 );
+       
+      }
+      
+
+.skill-description{
+/* padding: 30px; */
+text-align: center;
 
 }
 
