--- a/Style.css
+++ b/Style.css
@@ -1,193 +1,222 @@
- 
-hr{color: rgb(84, 234, 226);}
-*{
-    background-color: black;
-    color:white
+ hr {
+     color: rgb(84, 234, 226);
+ }
 
+ * {
+     background-color: black;
+     color: white
+ }
 
 
+ p {
 
+     font-family: serif;
 
-}
+ }
 
 
-p{
+ header {
+     background-image: url(photo/trackiationless.png);
+ }
 
-font-family: serif;
 
-}
+ .banner-greeting,
+ .banner-title,
+ .banner-description {
+     text-align: center;
+ }
 
+ .banner-btn {
+     text-align: center;
+ }
 
-header{ 
-background-image: url(photo/trackiationless.png);
-}
+ .social {
+     text-align: center;
+ }
 
+ nav {
+     display: flex;
+     justify-content: space-between;
 
-.banner-greeting, .banner-title, .banner-description{text-align: center;}
-.banner-btn{text-align: center;}
-.social{text-align: center;}
+ }
 
-nav{
-    display: flex;
-    justify-content: space-between;
-    
-}
+ .nav-title {
 
-.nav-title{
+     font-size: 25px;
+     font-weight: 800px;
 
-   font-size: 25px;
-   font-weight: 800px;
+ }
 
-}
-nav > ul{
+ nav>ul {
 
-    display: flex;
-    align-items: center;
-}
+     display: flex;
+     align-items: center;
+ }
 
-    nav li {
+ nav li {
 
-list-style: none;
- margin-right: 50px;
-}
-nav a{text-decoration: none;
-color: white;
-}
-.banner{
-    display: flex;
-    align-items: center;
-}
-.site-photo{ width: 500px;}
+     list-style: none;
+     margin-right: 50px;
+ }
 
-.qw
-{margin-left: 10px;}
-.social{
-    margin-top: 20px;
-}
-p{font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
+ nav a {
+     text-decoration: none;
+     color: white;
+ }
 
-.about-me{
+ .banner {
+     display: flex;
+     align-items: center;
+ }
 
-padding: 150px;
+ .site-photo {
+     width: 500px;
+ }
 
-}
+ .qw {
+     margin-left: 10px;
+ }
 
-.about{text-align: center;}
-.about-description{text-align: center;}
+ .social {
+     margin-top: 20px;
+ }
 
-.about-info-container{
-    display: flex;
-    justify-content: space-around;
-}
+ p {
+     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+ }
 
+ .about-me {
 
-.about-info{
-text-align: center;
+     padding: 150px;
 
-}
+ }
 
-.wido{
-    
-    padding: 30px 150px;
+ .about {
+     text-align: center;
+ }
 
-    
-        
-}
-.wido-title{
+ .about-description {
+     text-align: center;
+ }
 
-    text-align: center;
-}
-.wido-description{
-    text-align: center;
-    padding: 20px 150px;
+ .about-info-container {
+     display: flex;
+     justify-content: space-around;
+ }
 
-}
 
-.skill-container{
-    display: flex;
+ .about-info {
+     text-align: center;
 
-}
+ }
 
-.skill{
-    padding: 30px;
-    gap: 24px;
-    background: #42424277;
-    box-shadow: 2px 6px 50px 2px rgb(58, 58, 58 );
-       
-      }
-      
+ .wido {
 
-.skill-description{
-/* padding: 30px; */
-text-align: center;
+     padding: 30px 150px;
 
-}
 
 
-/* resume section */
+ }
 
-.resume-title{
-    text-align: center
-    ;
-font-size: 35px;
+ .wido-title {
 
-}
+     text-align: center;
+ }
 
+ .wido-description {
+     text-align: center;
+     padding: 20px 150px;
 
-.resume-column-title{
-color: #474747;
+ }
 
-font-size: 30px;
+ .skill-container {
+     display: flex;
 
-font-weight: 700;
+ }
 
-}
+ .skill {
+     padding: 30px;
+     gap: 24px;
+     background: #42424277;
+     box-shadow: 2px 6px 50px 2px rgb(58, 58, 58);
 
-.resume-container{
+ }
 
-    display: flex;
-    gap: 40px;
 
-}
+ .skill-description {
+     /* padding: 30px; */
+     text-align: center;
 
-.resume-item-title{
-    color: #474747;
-    font-size: 25px;
-font-weight: 700;
-margin: 10px;
+ }
 
 
-}
+ /* resume section */
 
+ .resume-title {
+     text-align: center;
+     font-size: 35px;
 
-.resume-item-institute, .resume-item-description{
+ }
 
-color: #d0c8c8;
 
-}
+ .resume-column-title {
+     color: #a5a2a2;
 
-.resume-container hr{margin: 30px 1px;}
+     font-size: 30px;
 
-.cv-donload{
-    text-align: center;
-    margin: 30px;
-}
+     font-weight: 700;
 
-footer{
-    display: flex;
-    margin: 20px;
-    /* align-items: center; */
-}
+ }
 
+ .resume-container {
 
+     display: flex;
+     gap: 40px;
 
-.footer-section-title{text-align: center;}
-.footer-section-description{text-align: center;}
-.footer-social-links{text-align: center;}
+ }
 
+ .resume-item-title {
+     color: #b0b0b0;
+     font-size: 25px;
+     font-weight: 700;
+     margin: 10px;
 
 
+ }
 
 
+ .resume-item-institute,
+ .resume-item-description {
 
+     color: #898989;
 
+ }
+
+ .resume-container hr {
+     margin: 30px 1px;
+ }
+
+ .cv-donload {
+     text-align: center;
+     margin: 30px;
+ }
+
+ footer {
+     display: flex;
+     margin: 20px;
+     /* align-items: center; */
+ }
+
+
+
+ .footer-section-title {
+     text-align: center;
+ }
+
+ .footer-section-description {
+     text-align: center;
+ }
+
+ .footer-social-links {
+     text-align: center;
+ }
