--- a/Style.css
+++ b/Style.css
@@ -196,7 +196,7 @@
      margin: 30px 1px;
  }
 
- .cv-donload {
+ .cv-download {
      text-align: center;
      margin: 30px;
  }
@@ -220,10 +220,25 @@
  .footer-social-links {
      text-align: center;
  }
- .footer-column{margin: 10px;}
+ .footer-column{ width: 50%;}
 
-.form input{
-    margin: 10px;
+ .contact-f input[type="text"], .contact-f input[type="email"],  textarea{ 
+    
+    display: block;
+margin-bottom: 25px;
+padding: 20px 35px;
+border: 0;
+color: #ffffff;
+background: rgb(49, 49, 49, 0.4);
+border-radius: 8px;
+width: 80%;
+
+}
+
+.input-btn{text-align: center;}
+
+.form input, textarea{
+    /* margin: 10px; */
 }
 
 
